[project]
name = "chainliit-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hamza", email = "hamzaamir7651@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
]

[project.scripts]
chainliit-intro = "chainliit_intro:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
